--- a/3-4_lab-wordpress/docker-compose.yml
+++ b/3-4_lab-wordpress/docker-compose.yml
@@ -15,10 +15,7 @@ services:
   wordpress:
     depends_on:
       - db
-    image: pwst_wordpress
-    build:
-        context: .
-        dockerfile: ./wp-dockerfile
+    image: wordpress:latest
     volumes:
       - wordpress_data:/var/www/html
     ports:
@@ -28,7 +25,7 @@ services:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_DB_NAME: wordpress      
 volumes:
   db_data: {}
   wordpress_data: {}
